--- a/code.css
+++ b/code.css
@@ -7,6 +7,11 @@ body.tudo {
     padding: 0;
     line-height: 1.6;
 }
+h3 {
+  font-size: 23px;
+  color: #4b2e2e;
+  margin-bottom: 10px;
+}
 
 .conteudo-topo {
     background-color: #d3b58f;
